--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
  </head>
  <body>
-    <button><a href="./Frontend/index.php"></a></button>
+    <h1 style="text-align: center;"><a href="./Frontend/index.php">TRANG WEB</a></h1>
  </body>
  </html>
